--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest"
   },
   "jest": {
-    "testMatch": ["**/*.test.js"]
+    "testMatch": [
+      "**/*.test.js"
+    ]
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "babel-jest": "^27.5.1",
+    "eslint": "^8.12.0",
     "jest": "^27.5.1"
   },
   "dependencies": {
